Polished the ui and squashed some bugs

--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,15 @@
-@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Handjet:wght@400;700&display=swap");
-:root {
-  --primary-color: #d53369;
-  --primary-dark: #8b2345;
-  --secondary-color: #daae51;
-  --secondary-dark: #8f7235;
-}
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Handjet:wght@400;700&display=swap');
+
 * {
   box-sizing: border-box;
 }
 
 body {
   margin: 0;
-  font-family: "Quicksand", sans-serif;
+  font-family: 'Quicksand', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: radial-gradient(#d53369, #8f7235);
+  background: radial-gradient(#186a5e, #053339);
   color: #e1eeeb;
   min-height: 100vh;
 }
@@ -29,7 +24,7 @@ body {
 }
 
 h1 {
-  font-family: "Handjet", monospace;
+  font-family: 'Handjet', monospace;
   text-align: center;
   text-transform: uppercase;
   color: #c1e2dd;
@@ -40,7 +35,7 @@ h1 {
 
 h1 em {
   font-style: normal;
-  color: var(--primary-color);
+  color: #00eeff;
 }
 
 header p {
@@ -55,7 +50,7 @@ header p {
 }
 
 #player h2 {
-  color: var(--secondary-color);
+  color: #54a399;
 }
 
 #player p {
@@ -66,8 +61,8 @@ header p {
 
 #player input {
   font: inherit;
-  border: 1px solid var(--secondary-color);
-  background-color: #44361a;
+  border: 1px solid #54a399;
+  background-color: #192f2b;
   border-radius: 4px;
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
@@ -77,8 +72,8 @@ header p {
 
 #player button {
   cursor: pointer;
-  background-color: var(--secondary-color);
-  border: 1px solid var(--secondary-color);
+  background-color: #54a399;
+  border: 1px solid #54a399;
   padding: 0.4rem 1rem;
   color: #061e1a;
   border-top-right-radius: 4px;
@@ -86,8 +81,8 @@ header p {
 }
 
 #player button:hover {
-  background-color: var(--secondary-dark);
-  border-color: var(--secondary-dark);
+  background-color: #3c8379;
+  border-color: #3c8379;
 }
 
 #challenges {
@@ -163,7 +158,7 @@ header p {
 }
 
 .result-modal h2 {
-  font-family: "Handjet", monospace;
+  font-family: 'Handjet', monospace;
   margin: 0 0 0.25rem 0;
   font-size: 3rem;
   text-transform: uppercase;
